<resources>
    <string name="app_name">ActivityLifeCycle</string>
    <string name="action_settings">Settings</string>
    <string name="activity_a">Activity A</string>
    <string name="activity_b">Activity B</string>
    <string name="startActivityB">Start Activity B</string>
    <string name="finishActivityB">Finish B</string>
    <string name="dialog">Dialog</string>
    <string name="dialog_message">Simple Dialog</string>
    <string name="thread_counter">Thread Counter:</string>
    <string name="close_app">Close App</string>
    <string name="activityB_content">
        Activity B occupies the complete window real-state. The Android OS forces Activity
        A to be Paused. However, the background thread keep incrementing the counter.
    </string>
    <string name="close_dialog">Close</string>
    <string name="title_activity_dialog">dialogActivity</string>
</resources>
