<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="50dp"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:layout_centerVertical="true"
    android:layout_centerHorizontal="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:src="@drawable/logo"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/whiteTextColor"
                android:text="@string/activity_b"
                android:id="@+id/activityB_title"
                android:textSize="30dp"/>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:textColor="@color/whiteTextColor"
            android:text="@string/activityB_content"
            android:layout_marginTop="50dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:textColor="@color/whiteTextColor"
            android:background="@color/blackColor"
            android:layout_centerHorizontal="true"
            android:textAllCaps="false"
            android:text="@string/finishActivityB"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingRight="25dp"
            android:paddingLeft="25dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp"
            android:onClick="finishB"/>

    </LinearLayout>
</LinearLayout>