<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="50dp"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/backgroundColor"
    android:layout_centerHorizontal="true"
    android:layout_centerVertical="true"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_main"
    tools:context="assignment.cmpe277.activitylifecycle.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:src="@drawable/logo"/>
            <TextView
                android:text="@string/activity_a"
                android:textSize="30dp"
                android:textColor="@color/whiteTextColor"
                android:layout_marginLeft="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:orientation="horizontal"
            android:id="@+id/button_group">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/buttonBackground"
                android:textSize="20dp"
                android:layout_marginLeft="20dp"
                android:padding="10dp"
                android:text="@string/startActivityB"
                android:textAllCaps="false"
                android:onClick="startActivityB"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:background="@color/buttonBackground"
                android:textSize="20dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:text="@string/dialog"
                android:textAllCaps="false"
                android:onClick="popDialog"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_alignTop="@+id/button_group"
            android:layout_marginTop="50dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="50dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/thread_counter"
                    android:textSize="20dp"
                    android:textColor="@color/whiteTextColor"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:textSize="20dp"
                    android:id="@+id/threadCounter"
                    android:textColor="@color/whiteTextColor"
                    android:text="0000"/>
            </LinearLayout>


        </LinearLayout>

        <View
            android:layout_marginTop="50dp"
            android:layout_width="fill_parent"
            android:id="@+id/separator"
            android:layout_height="1dp"
            android:background="@color/buttonBackground"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/close_app"
            android:textSize="20dp"
            android:textColor="@color/whiteTextColor"
            android:layout_centerHorizontal="true"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingRight="25dp"
            android:paddingLeft="25dp"
            android:background="@color/blackColor"
            android:layout_alignTop="@id/separator"
            android:textAllCaps="false"
            android:layout_marginTop="60dp"
            android:layout_gravity="center_horizontal"
            android:onClick="closeApp"/>

    </LinearLayout>

</RelativeLayout>
